header z-index issue fixed

--- a/public/project-admin-views/assets/css/style.css
+++ b/public/project-admin-views/assets/css/style.css
@@ -164,7 +164,7 @@ body.modal-open .chat-window-wrapper {
   margin: 0 !important;
   position: fixed;
   width: 100%;
-  z-index: 999;
+  z-index: 99999;
   min-height: 60px;
   left: 0;
   -webkit-backface-visibility: hidden;
