--- a/public/project-admin-views/assets/less/modules/layout.less
+++ b/public/project-admin-views/assets/less/modules/layout.less
@@ -179,7 +179,7 @@ body{
     margin: 0 !important;
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 99999;
     min-height: 60px;
     left:0;
     -webkit-backface-visibility:hidden;
